--- a/scripts/deployment.yml
+++ b/scripts/deployment.yml
@@ -1,1 +1,37 @@
 # Write Kubernetes Deployment Script
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: book-catalog
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: book-catalog
+  template:
+    metadata:
+      labels:
+        app: book-catalog
+    spec:
+      containers: 
+      - name: book-catalog
+        image: book-catalog:1
+        imagePullPolicy: Never
+        env:
+        - name: DATABASE_URL
+          value: "postgresql://anjo_pgsql_user:7txvIYJYa0F31RNDn0zy4eSQO30K5Ehi@dpg-crb8vr23esus73afnasg-a.oregon-postgres.render.com/anjo_pgsql"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: book-catalog
+spec:
+  selector:
+    app: book-catalog
+  type: NodePort
+  ports:
+    - protocol: TCP
+      port: 8000
+      targetPort: 4000
+      nodePort: 30000
